@@ -1,6 +1,29 @@
-# what's this??
-# This is not a makefile....
+EXE = polyglot.exe
 
-# Anyway here is the command for compiling polyglot under Mingw/Cygwin
+OBJS = attack.o board.o book.o book_make.o book_merge.o colour.o engine.o\
+ epd.o fen.o game.o gui.o hash.o io.o line.o list.o main.o mainloop.o\
+ move.o move_do.o move_gen.o move_legal.o option.o parse.o pgn.o piece.o\
+ pipe.o posix.o random.o san.o search.o square.o uci.o uci2uci.o util.o\
+ xboard2uci.o
 
-g++ -O2 -mno-cygwin -D_WIN32 *.cpp -opolyglot
+# set up for NO cygwin
+CYGF = -mno-cygwin
+CYGL = -lmsvcrt
+
+CC = g++
+DEFS = -DNDEBUG
+OPTS = -Os -frename-registers -funit-at-a-time -fstrict-aliasing -fstrength-reduce
+CFLAGS = -Wall -pipe $(DEFS) $(OPTS) $(CYGF)
+LFLAGS = -fpic -s $(CYGF)
+LIBS = $(CYGL)
+
+all: $(EXE)
+
+clean:
+	rm -rf $(OBJS) $(EXE)
+
+$(EXE): $(OBJS)
+	$(CC) $(LFLAGS) $(LIBS) $(OBJS) -o $(EXE)
+
+%.o: %.cpp
+	$(CC) $(CFLAGS) -c $<
